# OS-Me

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_tandem_insulin.py
app/: config.py  database.py  main.py
app/models/: glucose.py  insulin.py
app/poller/: dexcom.py  tandem.py
app/routers/: glucose.py  health.py  insulin.py
app/schemas/: glucose.py  insulin.py
app/services/: glucose.py  insulin.py
